2003-10-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix build error --disbable-m17n
	* config.h.in: undef USE_M17N, USE_UNICODE
	* etc.c (url_unquote_conv): USE_M17N
	* file.c (convertLine): USE_M17N
		(loadHTMLStream): fix ifdef USE_IMAGE->USE_M17N
		(loadBuffer): fix USE_M17N
		(getNextPage): fix USE_M17N
	* fm.h (USE_M17N): don't define USE_M17N in case LANG == JA
			(this should be done by configure)
		(wc_ces): dummy typedef
		(wc_Str_conv): fix non-m17n macro args
		(wc_Str_conv_strict): ditto
	* ftp.c (loadFTPDir): fix undefined USE_M17N
	* mimehead.c (decodeWord): ditto
		(decodeMIME): ditto
	* news.c (loadNewsgroup): ditto
	* proto.h (convertLine): ditto
		(loadGopherDir): ditto
		(loadFTPDir): ditto
		(loadNewsgroup): ditto
		(decodeWord): ditto
		(decodeMIME): ditto
		(url_unquote_conv): ditto
	* terms.c (SETCH): ditto

2003-10-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* --with-imagelib request on [w3m-dev 03981]
	 from Mamoru KOMACHI <usata@sodan.ecc.u-tokyo.ac.jp>
	* acinclude.m4 (AC_W3M_IMAGE): add --with-imagelib

2003-10-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix problem reported on [w3m-dev 03981]
	  from Mamoru KOMACHI <usata@sodan.ecc.u-tokyo.ac.jp>
	* configure.in: add AC_SUBST(HELP_DIR)
	* Makefile.in (HELP_DIR): use AC_SUBT(HELP_DIR)
	* scripts/Makefile.in: add PACKAGE, VERSION, DOMAIN
			use PACKAGE instead of package: 
			 CGIBIN_DIR,AUXBIN_DIR,CONF_DIR
			add HELP_DIR
			add SUBDIRS
			(install unstall): do $(SUBDIRS)
	* scripts/multipart/Makefile.in: add PACKAGE,VERSION,DOMAIN
			use PACKAGE instead of package: 
			 CGIBIN_DIR,AUXBIN_DIR,CONF_DIR
			add HELP_DIR
	* scripts/w3mman/Makefile.in: add PACKAGE,VERSION,DOMAIN
			use PACKAGE instead of package: 
			 CGIBIN_DIR,AUXBIN_DIR,CONF_DIR
			add HELP_DIR
			add BIN_DIR, MAN1_DIR
			LIB_TARGETS->CGIBIN_TARGETS
			fix INSTALL_MAN
	* scripts/w3mman/w3mman.1.in: 
			change @LIB_DIR@ to @libexecdir@/@PACKAGE@/cgi-bin/

2003-10-01  Akira TAGOH <at@gclab.org>
